# dex

./: .gitignore  .golangci.yml  CLAUDE.md  PROMPT.md  README.md  config.yaml.example  go.mod  go.sum  ralph.yml  toolbelt.yaml.example
.github/workflows/: ci.yml  release.yml
.ralph/: current-events  current-loop-id  events-20260129-205153.jsonl  events-20260129-225521.jsonl  events-20260130-010730.jsonl  events-20260130-023958.jsonl  events-20260130-030608.jsonl  history.jsonl
.ralph/agent/: auth-migration-notes.md  handoff.md  scratchpad.md  summary.md
apps/client/: .gitignore  README.md  (+4 more)
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: lib.rs  main.rs
design/: PROMPT.md  pages.md
docs/: DEPLOY.md  DOCUMENTATION-CLEANUP-2026-02-08.md  IDENTITY-SERVICE-PLAN.md  MESH-ACCESS-GAP.md  MESH-ACCESS-IMPLEMENTATION-PROGRESS.md  ONBOARDING-PLAN.md  README.md  SAAS-MONOREPO-PLAN.md  SETUP.md  USAGE.md
frontend/: embed.go  index.html  package-lock.json  package.json  vitest.config.ts
proposals/: 001-forgejo-migration.md  002-e2e-integration-gaps.md  003-passkey-sso.md
scripts/: build-macos-app.sh  build-macos-pkg.sh  install-client.sh  install.sh  run-e2e-tests.sh  setup-secrets.sh
todos/: 01-context-continuity.md  02-memory-system.md  03-loop-resilience.md  04-hat-system.md  05-issue-activity-sync.md  06-subagent-system.md  07-structured-output-validation.md  08-project-hints-system.md  09-security-unicode-sanitization.md  10-quest-chat-ui.md  11-realtime-activity-system.md  README.md
(+509 files in other folders)
